// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderRules(renderer, rules, props, optMap) renders expected snapshot 1`] = `
Object {
  "border": "a b c",
  "layout": "d e f",
}
`;

exports[`renderRules(renderer, rules, props, optMap) renders expected snapshot when optMap is an array 1`] = `
Object {
  "border": "a b c",
}
`;

exports[`renderRules(renderer, rules, props, optMap) renders expected snapshot when optMap is an object 1`] = `
Object {
  "borderAlias": "a b c",
}
`;
